--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-OPENAI_API_KEY = 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
+# OPENAI_API_KEY = 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
 TWILIO_ACCOUNT_SID = AC4606e19bab8da926a0bc817f8c27ea8a
 # TWILIO_ACCOUNT_SID = SK2350b1ecbeaf5561694236e6ee8cd0c0
 # TWILIO_AUTH_TOKEN = 0fXCUpsvqs9C0eKEX9eA59Pu62cYZnI5
