--- a/.env
+++ b/.env
@@ -2,5 +2,6 @@
 TWILIO_ACCOUNT_SID = AC4606e19bab8da926a0bc817f8c27ea8a
 # secret_key_id = SKb606cd8975fe98575107d248ff937700
 # secret_key = G2NkTaXZcUtveo8RtELOXklUXhqK5JGQ
-TWILIO_AUTH_TOKEN = e13fd983e247515a8bcefee1340672f9
+TWILIO_AUTH_TOKEN = b173b8d4147f0e49ee4415985bb957a6
 RECOVERY_TWILO = bDaJPqnzv1rNmcb52t6GL9KZKZWPFCw9URfkM2Kq
+SECRET_KEY = pickit12
